Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <p>Simple application for Arbor Solutions (<a href="http://www.arbsol.com">http://www.arbsol.com</a>) to add to our management system.</p>
 
+<p>Checkout the development progress on the <a href="http://www.barnescode.com/">BarnesCode Server</a> and watch it in action.  To gain access to the application to see how the modules work, contact one of the engineers below:</p>
+
 <table>
 <thead>
 <tr>
